really started this thing now

--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html>
-<title>
-</title>
-<body>
+    <title>Peggy's Feet</title>
+    <body>
+        <header>
+        <h1>Peggy's Feet Dot Com</h1>
+        </header>
+        
 
-All file names should be lower case, avoide spaces and stuff that is hard to type out.<br>  
-Dashes and underscores are accepatable.<br>
-Numbers are cool too.<br>
-Make life easier.<br>
-Promise.<br>
-</body>
+
+
+
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </body>
 </html>
