added css and linked to html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <title>Peggy's Feet</title>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+      </head>
     <body>
         <header>
         <h1>Peggy's Feet Dot Com</h1>
         </header>
         
+
 
 
 
