--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html>
     <title>Peggy's Feet</title>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
       </head>
     <body>
-        <header>
-        <h1>Peggy's Feet Dot Com</h1>
-        </header>
+        <div class="center">
+        <svg viewBox="0 0 800 800">
+            <path id="curve" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" />
+            <text width="500">
+              <textPath xlink:href="#curve">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                Peggy's Feet
+              </textPath>
+            </text>
+          </svg>
+          </div>
         
 
 
