made the header

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
   <meta name="author" content="Alex Clark">
   <meta name="description" content="Working Resume">
   <meta name="keywords" content="resume, awesome, alex, clark, alexclark, Steven Clark">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Ubuntu" type="text/css">
-  <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Shade" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
+    <header>
+      <div class="top-page">
+      <h1>Signature Studio Yearbook Selection Form</h1>
+      </div>
+    </header>
 
     
   
