added notice text and css formatting

--- a/index.html
+++ b/index.html
@@ -7,13 +7,32 @@
   <meta name="author" content="Alex Clark">
   <meta name="description" content="Working Resume">
   <meta name="keywords" content="resume, awesome, alex, clark, alexclark, Steven Clark">
-  <link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Shade" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=BioRhyme|Bungee|Bungee+Shade" rel="stylesheet">
   <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <header>
       <div class="top-page">
-      <h1>Signature Studio Yearbook Selection Form</h1>
+      <h1>Signature Studio<br>
+          Yearbook Selection<br> 
+          Form</h1>
+      </div>
+       <div class="student-information">
+         <p>
+           Please complete the following form to choose your yearbook image.
+           This will be the picture that is sent to your school for the yearbook.
+           Please note that any selection made after your schools yearbook deadline 
+           is not guarantee to be accepted.  
+           You will recieve email confrimation of your selection.
+          </p>
+       </div>
+      
+      <div class="yearbook-pick-form">
+          <form>
+
+
+          </form>
+
       </div>
     </header>
 
