--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Alex Clark">
   <meta name="description" content="Working Resume">
   <meta name="keywords" content="resume, awesome, alex, clark, alexclark, Steven Clark">
-  <link href="https://fonts.googleapis.com/css?family=BioRhyme|Bungee|Bungee+Shade" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Karla|Montserrat|Open+Sans|Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
