changed some font styles and decided to nix the hamburger menu overlay

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
   <meta name="author" content="Alex Clark">
   <meta name="description" content="Working Resume">
   <meta name="keywords" content="resume, awesome, alex, clark, alexclark, Steven Clark">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
 
-<header>
+
+    <header>
   <h2>AlexClark.org</h2>
 </header>
 
-
  <section>
   
-  <article>
+  <article class="content-left">
     <h1>Experience</h1>
       <p>Or something like that.  Not sure what should go
           inside this text area but it will be something that's
@@ -33,7 +34,7 @@
     </article>
       
  
-  <article>
+  <article class="content-right">
     <h1>box 2</h1>
     <p>Or something like that.  Not sure what should go
       inside this text area but it will be something that's
@@ -58,9 +59,17 @@
 
 </div>
 
+
 <footer>
   <p>Footer</p>
 </footer>
+
+
+
+  
+  
+  
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
 
 
