--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
   <h2>AlexClark.org</h2>
   <div class="links">
-  <a href="https://wwww.github.com/alexclark4121"><i class="fab fa-github" alt="github icon"></i></a>
+  <a href="https://www.github.com/alexclark4121/codelou-git"><i class="fab fa-github" alt="github icon"></i></a>
   <a href="mailto:alexclark4121@gmail.com"><i class="fas fa-at" alt="email icon"></i></a>
   <a href="https://www.twitter.com/alexclark4121"><i class="fab fa-twitter" alt="twitter icon"></i></a>
   <a href="tel:+15028897619"><i class="fas fa-phone" alt="phone icone"></i></a>
@@ -118,7 +118,7 @@
 
 <footer>
     <div class="links">
-      <a href="https://wwww.github.com/alexclark4121"><i class="fab fa-github" alt="github icon"></i></a>
+      <a href="https://www.github.com/alexclark4121/codelou-git"><i class="fab fa-github" alt="github icon"></i></a>
       <a href="mailto:alexclark4121@gmail.com"><i class="fas fa-at" alt="email icon"></i></a>
       <a href="https://www.twitter.com/alexclark4121"><i class="fab fa-twitter" alt="twitter icon"></i></a>
       <a href="tel:+15028897619"><i class="fas fa-phone" alt="phone icone"></i></a>
