added codepen.io icon and commented out the phone icon for now

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
   <h2>AlexClark.org</h2>
   <div class="links">
   <a href="https://www.github.com/alexclark4121/codelou-git"><i class="fab fa-github" alt="github icon"></i></a>
+  <a href="http://www.codepen.io/alexclark4121/"><i class="fab fa-codepen"></i></a>
   <a href="mailto:alexclark4121@gmail.com"><i class="fas fa-at" alt="email icon"></i></a>
   <a href="https://www.twitter.com/alexclark4121"><i class="fab fa-twitter" alt="twitter icon"></i></a>
-  <a href="tel:+15028897619"><i class="fas fa-phone" alt="phone icone"></i></a>
+ <!-- <a href="tel:+15028897619"><i class="fas fa-phone" alt="phone icone"></i></a> -->
   </div> 
 </header>
 
@@ -119,9 +120,10 @@
 <footer>
     <div class="links">
       <a href="https://www.github.com/alexclark4121/codelou-git"><i class="fab fa-github" alt="github icon"></i></a>
+      <a href="http://www.codepen.io/alexclark4121/"><i class="fab fa-codepen"></i></a>
       <a href="mailto:alexclark4121@gmail.com"><i class="fas fa-at" alt="email icon"></i></a>
       <a href="https://www.twitter.com/alexclark4121"><i class="fab fa-twitter" alt="twitter icon"></i></a>
-      <a href="tel:+15028897619"><i class="fas fa-phone" alt="phone icone"></i></a>
+     <!-- <a href="tel:+15028897619"><i class="fas fa-phone" alt="phone icone"></i></a> -->
     </div> 
 </footer>
 
