moved styles out of html, changed color on skillz bar, rearranged div's to fix opacity issues

--- a/index.html
+++ b/index.html
@@ -65,44 +65,32 @@
 
 
 <div class="skillbar clearfix " data-percent="65%">
-    <div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
-    <div class="skillbar-bar" style="background: #e67e22;"></div>
-    <div class="skill-bar-percent">65%</div>
+  <div class="skillbar-bar" id="html-bar"></div>
+  <div class="skillbar-title" id="html-title"><span>.html</span></div>
+  <div class="skill-bar-percent">65%</div>
   </div> <!-- End Skill Bar -->
   
   <div class="skillbar clearfix " data-percent="40%">
-    <div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
-    <div class="skillbar-bar" style="background: #3498db;"></div>
+    <div class="skillbar-bar" id="css-bar"></div>
+    <div class="skillbar-title" id="css-title"><span>.css</span></div>
     <div class="skill-bar-percent">40%</div>
   </div> <!-- End Skill Bar -->
   
   <div class="skillbar clearfix " data-percent="70%">
-    <div class="skillbar-title" style="background: #2c3e50;"><span>Nunchuck</span></div>
-    <div class="skillbar-bar" style="background: #2c3e50;"></div>
+    <div class="skillbar-bar" id="c-sharp-bar"></div>
+    <div class="skillbar-title" id="c-sharp-title"><span>.cs</span></div>
     <div class="skill-bar-percent">70%</div>
   </div> <!-- End Skill Bar -->
   
   <div class="skillbar clearfix " data-percent="55%">
-    <div class="skillbar-title" style="background: #46465e;"><span>Computer Hacking</span></div>
-    <div class="skillbar-bar" style="background: #5a68a5;"></div>
+    <div class="skillbar-bar" id="dot-net-bar"></div>
+    <div class="skillbar-title" id="dot-net-title"><span>.net</span></div>
     <div class="skill-bar-percent">55%</div>
   </div> <!-- End Skill Bar -->
   
-  <div class="skillbar clearfix " data-percent="25%">
-    <div class="skillbar-title" style="background: #333333;"><span>Bow Hunting</span></div>
-    <div class="skillbar-bar" style="background: #525252;"></div>
-    <div class="skill-bar-percent">25%</div>
-  </div> <!-- End Skill Bar -->
-  
-  <div class="skillbar clearfix " data-percent="90%">
-    <div class="skillbar-title" style="background: #27ae60;"><span>Management</span></div>
-    <div class="skillbar-bar" style="background: #2ecc71;"></div>
-    <div class="skill-bar-percent">90%</div>
-  </div> <!-- End Skill Bar -->
-  
   <div class="skillbar clearfix " data-percent="70%">
-    <div class="skillbar-title" style="background: #124e8c;"><span>.Net</span></div>
-    <div class="skillbar-bar" style="background: #4288d0;"></div>
+    <div class="skillbar-bar" id="javascript-bar"></div>
+    <div class="skillbar-title" id="javascript-title"><span>.js</span></div>
     <div class="skill-bar-percent">70%</div>
   </div> <!-- End Skill Bar -->
 
