changed back, it works

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section>
   
   <article class="content-left">
-    <span class="hello"><h2>Yo,</h2>
+    <span class="hello"><h2>Hello,</h2>
     <p>I'm Alex, and I am on the market.  Currently, I work for a local photography company.
     My typical date consists of...<br>
     
