--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-
+<!--header and social and pro links-->
     <header>
   <h2>AlexClark.org</h2>
   <div class="links">
@@ -29,7 +29,7 @@
 
 
 
- 
+ <!--two main content sections on the right and left.  Right collapes under the left-->
 
 <section>
   
@@ -63,6 +63,8 @@
 </section>
 
 
+<!--skills bar divs-->
+
 <div class="skillbar clearfix " data-percent="80%">
   <div class="skillbar-bar" id="html-bar"></div>
   <div class="skillbar-title" id="html-title"><span>.html</span></div>
@@ -93,6 +95,7 @@
     <div class="skill-bar-percent">40%</div>
   </div> <!-- End Skill Bar -->
 
+<!--place to put some accolades-->
 
 <div class="pre-footer">
   <h2>Mentionables</h2>
@@ -104,7 +107,7 @@
 
 </div>
 
-
+<!--footer-->
 <footer>
     <div class="links">
       <a href="https://www.github.com/alexclark4121/codelou-git"><i class="fab fa-github" alt="github icon"></i></a>
@@ -116,25 +119,12 @@
 </footer>
 
 
-
-  
-  
-  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-
-
-
 
 
 <!--script link-->
 
 <script src="scripts.js"></script>
-
-
-
-
-
-
 
 
 
