removed skills bar slider

--- a/index.html
+++ b/index.html
@@ -63,38 +63,39 @@
 </section>
 
 
-<!--skills bar divs-->
+<!--skills bar divs--
 
 <div class="skillbar clearfix " data-percent="80%">
   <div class="skillbar-bar" id="html-bar"></div>
   <div class="skillbar-title" id="html-title"><span>.html</span></div>
   <div class="skill-bar-percent">80%</div>
-  </div> <!-- End Skill Bar -->
+  </div> 
   
   <div class="skillbar clearfix " data-percent="40%">
     <div class="skillbar-bar" id="css-bar"></div>
     <div class="skillbar-title" id="css-title"><span>.css</span></div>
     <div class="skill-bar-percent">40%</div>
-  </div> <!-- End Skill Bar -->
+  </div> 
   
   <div class="skillbar clearfix " data-percent="30%">
     <div class="skillbar-bar" id="c-sharp-bar"></div>
     <div class="skillbar-title" id="c-sharp-title"><span>.cs</span></div>
     <div class="skill-bar-percent">30%</div>
-  </div> <!-- End Skill Bar -->
+  </div> 
   
   <div class="skillbar clearfix " data-percent="30%">
     <div class="skillbar-bar" id="dot-net-bar"></div>
     <div class="skillbar-title" id="dot-net-title"><span>.net</span></div>
     <div class="skill-bar-percent">30%</div>
-  </div> <!-- End Skill Bar -->
+  </div> 
   
   <div class="skillbar clearfix " data-percent="40%">
     <div class="skillbar-bar" id="javascript-bar"></div>
     <div class="skillbar-title" id="javascript-title"><span>.js</span></div>
     <div class="skill-bar-percent">40%</div>
-  </div> <!-- End Skill Bar -->
+  </div> 
 
+-->
 <!--place to put some accolades-->
 
 <div class="pre-footer">
