removed michael scott quote and put that I am looking for a job

--- a/index.html
+++ b/index.html
@@ -52,13 +52,10 @@
  
   <article class="content-right">
     
-    <p>So I'm back.</p>
-    <p>And I am never, ever going to leave.</p>
-    <h2>I am going nowhere.</h2>
-    <p>This place... is like... the hospital where I was born,</p>
-    <p>my house,</p>
-    <p>my old age home,</p>
-    <p>and my... graveyard... for my bones.</p>
+    <p>I am currently looking for new carrer opportunities and would fit in great as a junior developer.</p>
+    <p>I am currently working in the .Net framework specically ASP.NET and MVC type applicaitons.</p>
+    <p>I am also learning Swift and dipping into mobile development in my free time.</p>
+    
   </article>
 </section>
 
