--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
  
   <article class="content-right">
     
-    <p>I am currently looking for new carrer opportunities and would fit in great as a junior developer.</p>
-    <p>I am currently working in the .Net framework specically ASP.NET and MVC type applicaitons.</p>
-    <p>I am also learning Swift and dipping into mobile development in my free time.</p>
+    <h1>Right now I am mostly working with .NET, specifically ASP.NET and MVC type applications</h1>
+    <p>I also love mobile development and am learning and creating iOS apps in Swift</p>
     
   </article>
 </section>
