--- a/index.html
+++ b/index.html
@@ -51,14 +51,11 @@
       
  
   <article class="content-right">
-    
-    <p>So I'm back.</p>
-    <p>And I am never, ever going to leave.</p>
-    <h2>I am going nowhere.</h2>
-    <p>This place... is like... the hospital where I was born,</p>
-    <p>my house,</p>
-    <p>my old age home,</p>
-    <p>and my... graveyard... for my bones.</p>
+    <span class="hello"><h2>I would love to work for you</h2>
+    <p>I am currently looking for an opportunity in software development</p>
+    <p>as a junior developer.  I love working with and using new technologies </p>
+    <p>as well as budiling for anything people get to use.</p>
+    </span>
   </article>
 </section>
 
@@ -100,9 +97,10 @@
 
 <div class="pre-footer">
   <h2>Mentionables</h2>
-  <p>BS Software Development</p>
+  <!-- <p>BS Software Development</p> -->
   <p>Code Louisville Grad</p>
-  <p>Network+</p>
+  <p>Wordpress</p>
+  <p>Webflow</p>
   <p>A+</p>
   <p>CIW Site Development Associate</p>
 
